# zspotify-mitz

./: CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
zspotify/: __main__.py  respot.py  tagger.py  utils.py
